--- a/app/application/admin/views/scripts/book/edit.phtml
+++ b/app/application/admin/views/scripts/book/edit.phtml
@@ -44,6 +44,9 @@ $('#save-book-sort').click(function() {
 	<div class='page-line'>
 		<div class='drag-handle' draggable='true'></div>
 		<div class='page-label'><a href='/admin/book/edit-page/id/{{ id }}'>{{ label }}</a></div>
+
+		<div class='quick-edit'>qe</div>
+
 		<div class='page-link'>
 		<% if(link) { %>
 			{{ link }}.shtml
