--- a/app/application/admin/views/scripts/head.phtml
+++ b/app/application/admin/views/scripts/head.phtml
@@ -10,6 +10,7 @@
 <script type="text/javascript" src="<?=Class_Server::extUrl()?>/jquery.ndd.js"></script>
 <script type="text/javascript" src="<?=Class_Server::extUrl()?>/ckeditor/ckeditor.js"></script>
 <script type="text/javascript" src="<?=Class_Server::extUrl()?>/ajax-select-grid.js"></script>
+<script type="text/javascript" src="<?=Class_Server::extUrl()?>/prompt.js"></script>
 
 <script type="text/javascript" src="<?=Class_Server::libUrl()?>/script/icon-selector.js"></script>
 <script type="text/javascript" src="<?=Class_Server::libUrl()?>/admin/script/back.js"></script>
