--- a/app/application/admin/views/scripts/group/edit.phtml
+++ b/app/application/admin/views/scripts/group/edit.phtml
@@ -1,63 +1,55 @@
-<?=$this->form?>
-<div class='clear'></div>
+<div class='container-bg'>
+	<ul class='container'>
+		<li class='drop-to-sort'></li>
+	</ul>
+</div>
 
-<script type='text/javascript'>
-//var lightBox = $().LightBox();
+<div id='save-sort'>SAVE SORT</div>
 
-var parentSelector = $('#parentId');
-var orderSelector = $('#sort');
-var currentOrder = <?=$this->currentOrder ? $this->currentOrder : 0?>;
-parentSelector.change(function() {
-	fetchChildren();
-});
-var fetchChildren = function() {
-//	lightBox.show(true);
+<script>
+$('#save-sort').click(function() {
+	var treeleafs = $('.treeleaf-item');
+	var sortJsonStr = '{';
+	treeleafs.each(function(i, leaf) {
+		sortJsonStr += '"' + $(leaf).attr('id') +'":{"parentId":"'+$(leaf).attr('parent-id')+'", "sort":' + i + '},';
+	});
+	sortJsonStr = sortJsonStr.substring(0, sortJsonStr.length - 1);
+	sortJsonStr += '}';
+	
 	$.ajax({
-		dataType: 'json',
-		url:'/admin/group/get-group-json/filter_parentId/' + parentSelector.val(),
-		success: function(jsonObj) {
-			orderSelector.empty();
-			var op = $("<option value='0'>" + '[最顶端]' + "</option>");
-			op.appendTo(orderSelector);
-			$.each(jsonObj.data, function(i, obj) {
-				if(i+1 == currentOrder) {
-					var op = $("<option value='" + (i+1) + "' selected>" + obj.label + "</option>");
-				} else {
-					var op = $("<option value='" + (i+1) + "'>" + obj.label + "</option>");
-				}
-				op.appendTo(orderSelector);
-			});
-//			lightBox.hide();
+		url: '/admin/group/tree-sort/',
+		data: {treeId: "<?php echo $this->doc->type?>", sortJsonStr: sortJsonStr},
+		type: 'post',
+		success: function(json) {
+//			console.log('ok');
 		}
 	});
-}
-fetchChildren();
-
-var imageSelector = $("#introImagePath");
-var toContent = $('#to-content');
-
-imageSelector.css({'background-color':'#ddeeff'});
-imageSelector.click(function() {
-	lightBox.show();
-	$.ajax({
-		url: "/admin/file/get-file-selector/format/html/group/icon",
-		success: function(HTML) {
-			lightBox.setContent(HTML);
-			container = lightBox.getContent();
-			container.find('.file').click(function() {
-				var path = $(this).attr('path');
-				imageSelector.val(path);
-				lightBox.hide();
-			});
-		}
-	});
+	
 });
 
-var linkSelector = $(".select-link");
-linkSelector.click(function() {
-	lightBox.show();
-	content = lightBox.getContent();
-	content.append(toContent);
-	toContent.css('display','block');
-});
+//global defines
+var tree = {type: 'group', id: '<?php echo $this->doc->type?>'};
+</script>
+
+<script data-main="<?=Class_Server::libUrl()?>/admin/script/app/treeleaf" src="<?=Class_Server::extUrl()?>/require-jquery.js"></script>
+
+<script type='text/template' id='treeleaf-item-template'>
+	<div class='leaf-line'>
+		<div class='drag-handle' draggable='true'></div>
+		<div class='leaf-label'><a href='/admin/group/edit-item/id/{{ id }}'>{{ label }}</a></div>
+
+		<div class='quick-edit'>qe</div>
+
+		<div class='leaf-link'>
+		<% if(link) { %>
+			{{ link }}
+		<% } else { %>
+			{{ id }}
+		<% } %>
+		</div>
+		<div class='clear'></div>
+	</div>
+	<ul class='children'>
+		<li class='drop-to-sort' parent-id='{{ id }}'></li>
+	</ul>
 </script>
