--- a/app/application/admin/views/scripts/select-search-header-front.phtml
+++ b/app/application/admin/views/scripts/select-search-header-front.phtml
@@ -111,7 +111,7 @@ foreach($this->selectFields as $key => $value) {
         $optionsString.= $key.':{';
         $valuePair = array();
         foreach($value as $k => $v) {
-            $valuePair[] = $k.':\''.$v.'\'';
+            $valuePair[] = '\''.$k.'\':\''.$v.'\'';
         }
 //        if() {
 //        	$optionsString = substr($optionsString, 0, -1);
