added icon-selector js file

--- a/app/application/layout-scripts/head.phtml
+++ b/app/application/layout-scripts/head.phtml
@@ -35,7 +35,7 @@ $csa = Class_Session_Admin::getInstance();
 <script type="text/javascript"	src="<?=Class_Server::libUrl()?>/script/links.js"></script>
 <script type="text/javascript"	src="<?=Class_Server::libUrl()?>/script/icon-selector.js"></script>
 <script type="text/javascript"	src="<?=Class_Server::libUrl()?>/script/bootstrap.js"></script -->
-<script type="text/javascript"	src="http://minify.enorange.cn/?b=resource&f=cms/v2/script/front.js,cms/v2/script/lightbox.js,cms/v2/script/links.js,cms/v2/script/bootstrap.js"></script>
+<script type="text/javascript"	src="http://minify.enorange.cn/?b=resource&f=cms/v2/script/front.js,cms/v2/script/lightbox.js,cms/v2/script/links.js,cms/v2/script/bootstrap.js,cms/v2/script/icon-selector.js"></script>
 	
 <script>
 /************************************/
