--- a/app/application/admin/views/scripts/navi/edit.phtml
+++ b/app/application/admin/views/scripts/navi/edit.phtml
@@ -1,3 +1,9 @@
+<div class=''>
+	<ul class=''>
+		<li class='drop-to-sort'></li>
+	</ul>
+</div>
+
 <div class='container-bg'>
 	<ul class='container'>
 		<li class='drop-to-sort'></li>
