head file changed

--- a/app/application/admin/views/scripts/system/index.phtml
+++ b/app/application/admin/views/scripts/system/index.phtml
@@ -21,4 +21,9 @@
 	<a href='/admin/system/clear-all-cache'>清除全部缓存文件</a>
 </div>
 
+<div class='section'>
+	<div class='title'>CSS&amp;JS 文件管理</div>
+	<a href='/admin/system/head-file'>头文件</a>
+</div>
+
 <div class='clear'></div>
