--- a/app/application/admin/views/scripts/template.phtml
+++ b/app/application/admin/views/scripts/template.phtml
@@ -8,6 +8,7 @@ $naviArr = array(
 	array('title' => '内容管理', 'url' => '/admin/article/'),
 	array('title' => '手册管理', 'url' => '/admin/book/'),
 	array('title' => '产品管理', 'url' => '/admin/product/'),
+	array('title' => '广告管理', 'url' =>'/admin/ad-section/'),
 	array('title' => '用户管理', 'url' => '/admin/user/'),
 	array('title' => '系统管理', 'url' => '/admin/system/'),
 	array('title' => '模块管理', 'url' => '/admin/brick/'),
