--- a/app/application/admin/views/scripts/navi/edit.phtml
+++ b/app/application/admin/views/scripts/navi/edit.phtml
@@ -42,7 +42,7 @@ var tree = {type: 'navi', id: '<?php echo $this->naviDoc->getId()?>'};
 	<div class='leaf-line'>
 	<% } %>
 		<div class='drag-handle' draggable='true'></div>
-		<div class='leaf-label'><a href='javascript:void(0)' class='edit-all'>{{ label }}</a></div>
+		<div class='leaf-label'><a href='javascript:void(0)' class='edit-all' id='{{ id }}'>{{ label }}</a></div>
 		<div class='leaf-link'>{{ link }}</div>
 		<div class='clear'></div>
 	</div>
@@ -59,5 +59,14 @@ var tree = {type: 'navi', id: '<?php echo $this->naviDoc->getId()?>'};
 </script>
 
 <script>
-
+var createLink = function(){
+	var LinkModel = new Treeleaf;
+	var createLink = new TreeleafEditView({
+		model:LinkModel
+	});
+	createLink.render().el;
+}
+$('.create-link').click(function(){
+	createLink();
+});
 </script>
