--- a/app/application/layout-scripts/head.phtml
+++ b/app/application/layout-scripts/head.phtml
@@ -1,6 +1,8 @@
 <head>
 <?php
 $csa = Class_Session_Admin::getInstance();
+$cbc = Class_Brick_Controller::getInstance();
+$effectJsPath = $cbc->getJsPath();
 ?>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" >
 <?=$this->headMeta() ?>
@@ -13,6 +15,10 @@ $csa = Class_Session_Admin::getInstance();
 <script type="text/javascript" src="<?=Class_Server::extUrl()?>/jub.js"></script>
 <?php } else { ?>
 <script type="text/javascript" src="<?=Class_Server::extUrl()?>/src/jquery.1.7.1.min.js"></script>
+<?php }?>
+
+<?php if(!empty($effectJsPath)) {?>
+<script type="text/javascript"	src="http://minify.enorange.cn/?b=resource/cms/v2/front/script/effect&f=<?php echo $effectJsPath?>"></script>
 <?php }?>
 
 <!-- script type="text/javascript"	src="<?=Class_Server::libUrl()?>/front/script/front-effect.js"></script>
