--- a/app/application/admin/views/scripts/navi/edit.phtml
+++ b/app/application/admin/views/scripts/navi/edit.phtml
@@ -60,7 +60,7 @@ var tree = {type: 'navi', id: '<?php echo $this->naviDoc->getId()?>'};
 
 <script>
 var createLink = function(){
-	var LinkModel = new Treeleaf;
+	var LinkModel = new Treeleaf();
 	var createLink = new TreeleafEditView({
 		model:LinkModel
 	});
