--- a/app/application/admin/views/scripts/book/edit.phtml
+++ b/app/application/admin/views/scripts/book/edit.phtml
@@ -3,6 +3,7 @@
 		<li class='drop-to-sort'></li>
 	</ul>
 </div>
+<div><a herf='javascript:void(0)' class='create-link'>添加新书页</a></div>
 
 <script>
 saveSort = function() {
@@ -41,7 +42,7 @@ var tree = {type: 'book', id: '<?php echo $this->doc->getId()?>'};
 	<div class='leaf-line'>
 	<% } %>
 		<div class='drag-handle' draggable='true'></div>
-		<div class='leaf-label'><a href='/admin/book/edit-page/id/{{ id }}'>{{ label }}</a></div>
+		<div class='leaf-label'><a href='javascript:void(0)' class='edit-all' id='{{ id }}'>{{ label }}</a></div>
 		<div class='leaf-link'>
 		<% if(link) { %>
 			{{ link }}
@@ -54,4 +55,25 @@ var tree = {type: 'book', id: '<?php echo $this->doc->getId()?>'};
 	<ul class='children'>
 		<li class='drop-to-sort' parent-id='{{ id }}'></li>
 	</ul>
+</script>
+
+<script type='text/template' id='treeleaf-edititem-template'>
+	<div class='label-el'><span>链接名：</span><input class='edit-value' name='label' type='text' value='{{ label }}'></div>
+	<div class='link-el'><span>链接地址：</span><input class='edit-value' name='link' type='text' value='{{ link }}'></div>
+	<div class='css-el'><span>CSS Name:</span><input class='edit-value' name='css' type='text' value='{{ css }}'></div>
+	<a class='edit-save' href='javascript:void(0)'>保存</a>
+	<a class='edit-delete' href='javascript:void(0)'>删除</a>
+</script>
+
+<script>
+var createLink = function(){
+	var LinkModel = new Treeleaf();
+	var createLink = new TreeleafEditView({
+		model:LinkModel
+	});
+	createLink.render().el;
+}
+$('.create-link').click(function(){
+	createLink();
+});
 </script>
