--- a/app/application/layout-scripts/head.phtml
+++ b/app/application/layout-scripts/head.phtml
@@ -20,7 +20,7 @@ $effectJsPath = $cbc->getJsPath();
 <?php if(!empty($effectJsPath)) {?>
 <script type="text/javascript"	src="http://minify.enorange.cn/?b=resource/cms/v2/front/script/effect&f=<?php echo $effectJsPath?>"></script>
 <?php }?>
-
+<script type="text/javascript" src="http://local.host/slide.js"></script>
 <!-- script type="text/javascript"	src="<?=Class_Server::libUrl()?>/front/script/front-effect.js"></script>
 <script type="text/javascript"	src="<?=Class_Server::libUrl()?>/front/script/impact.js"></script -->
 <?=$this->headLink() ?>
