--- a/app/application/admin/views/scripts/navi/edit.phtml
+++ b/app/application/admin/views/scripts/navi/edit.phtml
@@ -1,6 +1,6 @@
 <div class='container-bg'>
 	<ul class='container'>
-		<li class='drop-to-sort'></li>
+		<li class='drop-to-sort' parent-id='0'></li>
 	</ul>
 </div>
 <div><a herf='javascript:void(0)' class='create-link'>添加新链接</a></div>
@@ -42,7 +42,7 @@ var tree = {type: 'navi', id: '<?php echo $this->naviDoc->getId()?>'};
 	<div class='leaf-line'>
 	<% } %>
 		<div class='drag-handle' draggable='true'></div>
-		<div class='leaf-label'><a href='javascript:void(0)' class='edit-all' id='{{ id }}'>{{ label }}</a></div>
+		<div class='leaf-label'><a href='javascript:void(0)' class='edit' id='{{ id }}'>{{ label }}</a></div>
 		<div class='leaf-link'>{{ link }}</div>
 		<div class='clear'></div>
 	</div>
@@ -50,23 +50,23 @@ var tree = {type: 'navi', id: '<?php echo $this->naviDoc->getId()?>'};
 		<li class='drop-to-sort' parent-id='{{ id }}'></li>
 	</ul>
 </script>
-<script type='text/template' id='treeleaf-edititem-template'>
+<script type='text/template' id='treeleaf-editor'>
 	<div class='label-el'><span>链接名：</span><input class='edit-value' name='label' type='text' value='{{ label }}'></div>
 	<div class='link-el'><span>链接地址：</span><input class='edit-value' name='link' type='text' value='{{ link }}'></div>
 	<div class='css-el'><span>CSS Name:</span><input class='edit-value' name='css' type='text' value='{{ css }}'></div>
-	<a class='edit-save' href='javascript:void(0)'>保存</a>
-	<a class='edit-delete' href='javascript:void(0)'>删除</a>
+	<a class='edit-save button' href='javascript:void(0)'>保存</a>
+	<a class='edit-delete button' href='javascript:void(0)'>删除</a>
 </script>
 
 <script>
-var createLink = function(){
-	var LinkModel = new Treeleaf();
-	var createLink = new TreeleafEditView({
-		model:LinkModel
+var showEditor = function(){
+	var model = new Treeleaf();
+	var tlEditor = new TreeleafEditorView({
+		model:model
 	});
-	createLink.render().el;
+	tlEditor.render();
 }
 $('.create-link').click(function(){
-	createLink();
+	showEditor();
 });
 </script>
