--- a/app/application/layout-scripts/template.phtml
+++ b/app/application/layout-scripts/template.phtml
@@ -33,14 +33,6 @@ if($csa->hasPrivilege()) {
 <?//=$HTML?>
 
 <?php
-//	$table = new Zend_Db_Table('layout_stage');
-//	$rowset = $table->fetchAll($table->select()->where('layoutId = ?', $layoutRow->id)
-//		->order('sort'));
-		
-		
-		
-//	$co = App_Factory::_m('Layout');
-//	$doc = $co->find('4fd2eb003aad534462010000');
 	$rowset = $layoutRow->stage;
 	if(!is_null($rowset)) {
 		foreach($rowset as $row) {
@@ -51,7 +43,7 @@ if($csa->hasPrivilege()) {
 			foreach($typeArr as $key => $spriteType) {
 				$spriteName = $row['stageId'].'-'.$key;
 ?>
-	<div<?php empty($row['uniqueId']) ? " " : " id='".$row['uniqueId']."-$key'"?> stage-id='<?php echo $row['stageId']?>' sprite-name='<?php echo $spriteName?>' class='sprite grid-<?php echo $spriteType?>'>
+	<div<?php echo empty($row['uniqueId']) ? " " : " id='".$row['uniqueId']."-$key'"?> stage-id='<?php echo $row['stageId']?>' sprite-name='<?php echo $spriteName?>' class='sprite grid-<?php echo $spriteType?>'>
 	<?php if(array_key_exists($spriteName, $HTML_ARR)) { ?>
 	<?php echo $HTML_ARR[$spriteName]?>
 	<?php } ?>
