--- a/app/application/admin/views/scripts/system/head-file.phtml
+++ b/app/application/admin/views/scripts/system/head-file.phtml
@@ -17,21 +17,26 @@
 </script>
 
 <script type='text/template' id='headfile-edititem-template'>
-	<div class='filename-el'><span>文件名：</span><input class='edit-value' name='filename' type='text' value='{{ filename }}'></div>
-	<div class='filetype-el'><span>文件类型：</span>
-		<select class='edit-value' name='type'>
-			<option value='js' <%if(type == 'js'){%>selected='selected'<%}%>>js</option>
-			<option value='css' <%if(type == 'css'){%>selected='selected'<%}%>>css</option>
-		</select>
+	<div class='editor-title'>新建/修改文件</div>
+	<div class='editor-contenr'>
+		<div class='filename-el'>文件名：</div>
+		<div><input class='edit-value' name='filename' type='text' value='{{ filename }}'></div>
+		<div class='filetype-el'>文件类型：</div>
+		<div>
+			<select class='edit-value' name='type'>
+				<option value='js' <%if(type == 'js'){%>selected='selected'<%}%>>js</option>
+				<option value='css' <%if(type == 'css'){%>selected='selected'<%}%>>css</option>
+			</select>
+		</div>
+		<a class='edit-save button' href='javascript:void(0)'>保存</a>
+		<a class='edit-delete button' href='javascript:void(0)'>删除</a>
 	</div>
-	<a class='edit-save' href='javascript:void(0)'>保存</a>
-	<a class='edit-delete' href='javascript:void(0)'>删除</a>
 </script>
 
 <script>
 var createFile = function(){
-	var LinkModel = new Headfile();
-	var createFile = new Headfileedit({
+	var LinkModel = new HeadFile();
+	var createFile = new HeadFileedit({
 		model:LinkModel
 	});
 	createFile.render().el;
