--- a/app/application/admin/views/scripts/system/head-file.phtml
+++ b/app/application/admin/views/scripts/system/head-file.phtml
@@ -36,7 +36,7 @@
 <script>
 var createFile = function(){
 	var LinkModel = new HeadFile();
-	var createFile = new HeadFileedit({
+	var createFile = new HeadFileEditView({
 		model:LinkModel
 	});
 	createFile.render().el;
