bug fixed, added extension AdGroupCarousel

--- a/app/application/layout-scripts/head.phtml
+++ b/app/application/layout-scripts/head.phtml
@@ -25,7 +25,7 @@ $effectJsPath = $cbc->getJsPath();
 		$jsList = $cbc->getJsList();
 		foreach($jsList as $js) {
 		?>
-<script type="text/javascript" src="<?=Class_Server::libUrl()?>/script/script/effect/<?php echo $js?>"></script>		
+<script type="text/javascript" src="<?=Class_Server::libUrl()?>/front/script/effect/<?php echo $js?>"></script>		
 		<?php } ?>
 	<?php } ?>
 <?php }?>
